--- a/paginas/menu.html
+++ b/paginas/menu.html
@@ -257,7 +257,7 @@
                     <article class="contenedor__menu">
                         <h3 class="descripcion__titulo">Helado Artesanal de Mandarina y Romero con Crumble de Almendras</h3>
                         <figure class="menu__plato">
-                            <img src="../multimedia/Principales/principal 5-pasta.jpg" alt="" class="plato__foto">
+                            <img src="../multimedia/Postres/postre 5-helado.jpg" alt="" class="plato__foto">
                             <figcaption class="plato__descripcion">
                                 <p class="descripcion__parrafo">Dos bolas de nuestro helado casero cremoso, con el vibrante sabor de la mandarina y un toque aromático de romero fresco. Servido con un crujiente y tostado crumble de almendras.</p>
                             </figcaption>
