--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 <body>
     <!-- Inicio sección Header -->
     <header>
-        <div class="encabezado">
+        <nav class="encabezado">
             <a href="#" class="encabezado__logo">
                 <p>Mesa Crítica<span class="logo__textoResaltado">.</span></p>
             </a>
             <ul class="encabezado__navegacion">
-                <li><a href="#" class="navegacion__boton seleccionado">Inicio</a></li>
+                <li><a href="#" class="navegacion__boton navegacion__boton--seleccionado">Inicio</a></li>
                 <li><a href="paginas/menu.html" class="navegacion__boton">Menú</a></li>
                 <li><a href="paginas/contacto.html" class="navegacion__boton">Contacto</a></li>
                 <li><a href="paginas/nosotros.html" class="navegacion__boton">Nosotros</a></li>
                 <li><a href="paginas/galeria.html" class="navegacion__boton">Galería</a></li>
                 <li><a href="paginas/reservas.html" class="navegacion__boton">Reservas</a></li>
             </ul>
-        </div>
+        </nav>
     </header>
     <!-- Fin sección Header -->
 
