--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Inicio sección Header -->
     <header>
-        <div class="encabezado">
+        <nav class="encabezado">
             <a href="../index.html" class="encabezado__logo">
                 <p>Mesa Crítica<span class="logo__textoResaltado">.</span></p>
             </a>
@@ -18,11 +18,11 @@
                 <li><a href="../index.html" class="navegacion__boton">Inicio</a></li>
                 <li><a href="menu.html" class="navegacion__boton">Menú</a></li>
                 <li><a href="contacto.html" class="navegacion__boton">Contacto</a></li>
-                <li><a href="#" class="navegacion__boton seleccionado">Nosotros</a></li>
+                <li><a href="#" class="navegacion__boton navegacion__boton--seleccionado">Nosotros</a></li>
                 <li><a href="galeria.html" class="navegacion__boton">Galería</a></li>
                 <li><a href="reservas.html" class="navegacion__boton">Reservas</a></li>
             </ul>
-        </div>
+        </nav>
     </header>
     <!-- Fin sección Header -->
 
