--- a/paginas/reservas.html
+++ b/paginas/reservas.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Inicio sección Header -->
     <header>
-        <div class="encabezado">
+        <nav class="encabezado">
             <a href="#" class="encabezado__logo">
                 <p>Mesa Crítica<span class="logo__textoResaltado">.</span></p>
             </a>
@@ -20,9 +20,9 @@
                 <li><a href="contacto.html" class="navegacion__boton">Contacto</a></li>
                 <li><a href="nosotros.html" class="navegacion__boton">Nosotros</a></li>
                 <li><a href="galeria.html" class="navegacion__boton">Galería</a></li>
-                <li><a href="#" class="navegacion__boton seleccionado">Reservas</a></li>
+                <li><a href="#" class="navegacion__boton navegacion__boton--seleccionado">Reservas</a></li>
             </ul>
-        </div>
+        </nav>
     </header>
     <!-- Fin sección Header -->
 
