--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Inicio sección Header -->
     <header>
-        <div class="encabezado">
+        <nav class="encabezado">
             <a href="../index.html" class="encabezado__logo">
                 <p>Mesa Crítica<span class="logo__textoResaltado">.</span></p>
             </a>
@@ -19,10 +19,10 @@
                 <li><a href="menu.html" class="navegacion__boton">Menú</a></li>
                 <li><a href="contacto.html" class="navegacion__boton">Contacto</a></li>
                 <li><a href="nosotros.html" class="navegacion__boton">Nosotros</a></li>
-                <li><a href="#" class="navegacion__boton seleccionado">Galería</a></li>
+                <li><a href="#" class="navegacion__boton navegacion__boton--seleccionado">Galería</a></li>
                 <li><a href="reservas.html" class="navegacion__boton">Reservas</a></li>
             </ul>
-        </div>
+        </nav>
     </header>
     <!-- Fin sección Header -->
 
