--- a/paginas/menu.html
+++ b/paginas/menu.html
@@ -10,19 +10,19 @@
 <body>
     <!-- Inicio sección Header -->
     <header>
-        <div class="encabezado">
+        <nav class="encabezado">
             <a href="../index.html" class="encabezado__logo">
                 <p>Mesa Crítica<span class="logo__textoResaltado">.</span></p>
             </a>
             <ul class="encabezado__navegacion">
                 <li><a href="../index.html" class="navegacion__boton">Inicio</a></li>
-                <li><a href="#" class="navegacion__boton seleccionado">Menú</a></li>
+                <li><a href="#" class="navegacion__boton navegacion__boton--seleccionado">Menú</a></li>
                 <li><a href="contacto.html" class="navegacion__boton">Contacto</a></li>
                 <li><a href="nosotros.html" class="navegacion__boton">Nosotros</a></li>
                 <li><a href="galeria.html" class="navegacion__boton">Galería</a></li>
                 <li><a href="reservas.html" class="navegacion__boton">Reservas</a></li>
             </ul>
-        </div>
+        </nav>
     </header>
     <!-- Fin sección Header -->
 
