--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -28,6 +28,10 @@
 
     <!-- Inicio sección Main -->
     <main>
+        <div class="seccion">
+            <h3 class="seccion__subtitulo verdeGradual">Mesa Crítica</h3>
+            <h1 class="seccion__titulo verdeGradual">Sobre nosotros</h1>
+        </div>
         <div class="nosotrosWrap">
             <section class="contenedor__nosotros">
                 <article class="nosotros__info">
